# AEREAS

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  main.py  pyproject.toml
app/core/: config.py
app/data/: README.md
app/data/argrewrite/: pairs.json
app/data/asap/: benchmark_prompt1.jsonl  gold_prompt1.json
app/db/: __init__.py  base.py  models.py  session.py
app/llm/: client.py
app/models/: __init__.py  context.py
app/notebook/: README.md  colab_argrewrite_scoring_evaluator.ipynb  colab_backend_launcher.ipynb  colab_direct_evaluator.ipynb  colab_direct_scoring_evaluator.ipynb  colab_llm_evaluator.ipynb  colab_revision_scorer.ipynb  colab_revision_scorer_v2.ipynb
app/routes/: __init__.py  dashboard.py  evaluation.py  health.py  upload.py
app/schemas/: __init__.py  dashboard.py  review.py
app/services/: __init__.py  document.py  history.py  research.py  revision.py  storage.py  workflow.py
app/supervisor/: __init__.py  agent.py  synthesis.py
app/tests/: test_document_structure.py  test_live_check.py  test_llm_client.py  test_text_span.py  test_worker_schemas.py
app/utils/: logger.py  pdf_parser.py
app/workers/: __init__.py  argumentation.py  base.py  citation.py  coherence.py  critic.py  grammar.py  plagiarism.py  research.py  reviewer.py  schemas.py  tone.py
migration/: env.py
migration/versions/: df2a674c8561_initial_migration.py
scripts/: run_service.ps1  run_services.sh  stop_services.sh
