[project]
name = "AcRev"
version = "0.1.0"
description = "Academic Review and Revision System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.14.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "asyncpg>=0.31.0",
    "redis>=7.1.0",
    "google-genai>=1.68",
    "boto3>=1.34.0",
    "pypdf>=4.0.0",
    "pymupdf>=1.25.0",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "sentence-transformers>=5.3.0",
    "spacy>=3.7.0",
    "nltk>=3.9.4",
    "faiss-cpu>=1.13.2",
]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
